namespace Chess.Enums;
public enum Colors
{
    White,
    Black
}