namespace Chess.Enums;
public enum PlayerStatus
{
    Normal,
    Checked,
    Checkmate,
    Won,
    Stalemate,
    Draw,
    Resigned
}