namespace Chess.Enums;
public enum PromoteOption
{
    Queen,
    Rook,
    Bishop,
    Knight
}